--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@astrojs/cloudflare": "^12.4.0",
 		"@astrojs/react": "^4.2.3",
 		"@fontsource/poppins": "^5.2.5",
+		"@headlessui/react": "^2.2.1",
 		"@tailwindcss/vite": "^4.1.3",
 		"@types/react": "^19.1.1",
 		"@types/react-dom": "^19.1.2",
